# kuseraccount

./: CMakeLists.txt  README.md
kcm/: CMakeLists.txt  adduserdlg.cpp  adduserdlg.h  chgpwddlg.cpp  chgpwddlg.h  faceiconbutton.cpp  faceiconbutton.h  faceiconpopup.cpp  kcm_useraccount.desktop  main.cpp  main.h  removeuserdlg.cpp  removeuserdlg.h
kcm/icons/: icons.qrc
kcm/pics/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in  kuseraccount.pot  zh_CN.po
